--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,8 @@ en:
     edit_question: "Edit question"
     my_subject: "My subjects"
     subject: "Subject"
+    new_group: New Group
+    edit_group: Edit Group
   message:
     the_form_contains: "The form contains"
     errors: "errors"
@@ -50,6 +52,7 @@ en:
   static_pages:
     create_exams: "Create exam"
     create_subject: "Create Subject"
+    create_group: "New Group"
   exams:
     new: "Create new exam !"
     edit: "Edit exam !"
@@ -71,6 +74,21 @@ en:
       number_of_question: Number of question
     show:
       question_title: "Title"
+  groups:
+    new:
+      new_group: "New Group"
+      edit_group: "Edit Group"
+    index:
+      my_group: My Groups
+      name: Name
+  category:
+    edit:
+      edit_cate: "Edit category"
+    new:
+      new_cate: "New Category"
+    index:
+      all: "All Category"
+      title: "Title"
 
 
 
